Bug 783523 - Fix platform-specific nsresult misuse; r=ehsan,tbsaunde,smaug