embedding/components/printingui/src/mac/nsPrintProgress.cpp
@@ -27,7 +27,7 @@ nsPrintProgress::nsPrintProgress()
   m_closeProgress = false;
   m_processCanceled = false;
   m_pendingStateFlags = -1;
-  m_pendingStateValue = 0;
+  m_pendingStateValue = NS_OK;
 }
 
 nsPrintProgress::~nsPrintProgress()
@@ -88,7 +88,9 @@ NS_IMETHODIMP nsPrintProgress::OpenProgressDialog(nsIDOMWindow *parent,
 NS_IMETHODIMP nsPrintProgress::CloseProgressDialog(bool forceClose)
 {
   m_closeProgress = true;
-  return OnStateChange(nullptr, nullptr, nsIWebProgressListener::STATE_STOP, forceClose);
+  // XXX Casting bool to nsresult
+  return OnStateChange(nullptr, nullptr, nsIWebProgressListener::STATE_STOP,
+                       static_cast<nsresult>(forceClose));
 }
 
 /* nsIPrompt GetPrompter (); */
@@ -113,7 +115,7 @@ NS_IMETHODIMP nsPrintProgress::GetProcessCanceledByUser(bool *aProcessCanceledBy
 NS_IMETHODIMP nsPrintProgress::SetProcessCanceledByUser(bool aProcessCanceledByUser)
 {
   m_processCanceled = aProcessCanceledByUser;
-  OnStateChange(nullptr, nullptr, nsIWebProgressListener::STATE_STOP, false);
+  OnStateChange(nullptr, nullptr, nsIWebProgressListener::STATE_STOP, NS_OK);
   return NS_OK;
 }
 
@@ -132,10 +134,11 @@ NS_IMETHODIMP nsPrintProgress::RegisterListener(nsIWebProgressListener * listene
   {
     m_listenerList->AppendElement(listener);
     if (m_closeProgress || m_processCanceled)
-      listener->OnStateChange(nullptr, nullptr, nsIWebProgressListener::STATE_STOP, 0);
+      listener->OnStateChange(nullptr, nullptr,
+                              nsIWebProgressListener::STATE_STOP, NS_OK);
     else
     {
-      listener->OnStatusChange(nullptr, nullptr, 0, m_pendingStatus.get());
+      listener->OnStatusChange(nullptr, nullptr, NS_OK, m_pendingStatus.get());
       if (m_pendingStateFlags != -1)
         listener->OnStateChange(nullptr, nullptr, m_pendingStateFlags, m_pendingStateValue);
     }
