netwerk/protocol/device/GonkCaptureProvider.cpp
@@ -537,7 +537,7 @@ NS_IMETHODIMP GonkCameraInputStream::AsyncWait(nsIInputStreamCallback *aCallback
 }
 
 
-NS_IMETHODIMP GonkCameraInputStream::CloseWithStatus(uint32_t status)
+NS_IMETHODIMP GonkCameraInputStream::CloseWithStatus(nsresult status)
 {
   GonkCameraInputStream::doClose();
   return NS_OK;
