xpcom/reflect/xptcall/src/md/unix/xptcinvoke_x86_64_unix.cpp
@@ -156,10 +156,10 @@ NS_InvokeByIndex_P(nsISupports * that, uint32_t methodIndex,
     methodAddress += 8 * methodIndex;
     methodAddress = *((uint64_t *)methodAddress);
     
-    typedef uint32_t (*Method)(uint64_t, uint64_t, uint64_t, uint64_t,
+    typedef nsresult (*Method)(uint64_t, uint64_t, uint64_t, uint64_t,
                                uint64_t, uint64_t, double, double, double,
                                double, double, double, double, double);
-    uint32_t result = ((Method)methodAddress)(a0, a1, a2, a3, a4, a5,
+    nsresult result = ((Method)methodAddress)(a0, a1, a2, a3, a4, a5,
                                               d0, d1, d2, d3, d4, d5,
                                               d6, d7);
     return result;
